Stylish the code
